<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="app_title">My Nanodegree Apps!</string>

    <string name="media_stream_app_button_label">SPOTIFY STREAMER</string>
    <string name="scores_app_button_label">FOOTBALL SCORES APP</string>
    <string name="library_app_button_label">LIBRARY APP</string>
    <string name="ant_app_button_label">BUILD IT BIGGER</string>
    <string name="materialize_app_button_label">XYZ READER</string>
    <string name="own_app_button_label">CAPSTONE: MY OWN APP</string>

    <string name="media_stream_app_message">This button will launch spotify streamer app!</string>
    <string name="scores_app_message">This button will launch football scores app!</string>
    <string name="library_app_message">This button will launch library app!</string>
    <string name="ant_app_message">This button will launch build it bigger app!</string>
    <string name="materialize_app_message">This button will launch xyz reader app!</string>
    <string name="own_app_button_message">This button will launch my capstone app!</string>

</resources>
